// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Component Diagrams service endpoint returns no diagrams renders a message saying there are no call graphs available 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Call Graphs
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div>
    <transition-stub
      class="my-3"
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        <p>
          
      The call graphs on this page come from a combination of Zipkin traces.
      The visualisation is not out-of-the-box Zipkin functionality and is
      bespoke to Kronicle.
    
        </p>
         
        <p
          class="mb-0"
        >
          
      A maximum of 20 call graphs are displayed on this
      page at any one time.
    
        </p>
      </div>
    </transition-stub>
     
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-warning"
          role="alert"
        >
          <!---->
          
      No call graphs are available for this component. Possibly:

      
          <ol>
            <li>
              The component is not integrated with Zipkin yet or
            </li>
             
            <li>
              
          Kronicle may have restarted recently and not have loaded Zipkin data
          yet
        
            </li>
          </ol>
        </div>
      </transition-stub>
    </div>
     
    <div
      class="call-graphs"
    />
     
    <div
      class="nodes"
    >
      <h4>
        Component Nodes
      </h4>
       
    </div>
  </div>
</div>
`;

exports[`Index when Get Diagrams service endpoints returns a call graph renders the nodes and call graphs 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Call Graphs
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div>
    <transition-stub
      class="my-3"
      css="true"
      enteractiveclass=""
      enterclass=""
      entertoclass="show"
      leaveactiveclass=""
      leaveclass="show"
      leavetoclass=""
      name=""
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="alert alert-dismissible alert-info"
        role="alert"
      >
        <button
          aria-label="Close"
          class="close"
          type="button"
        >
          ×
        </button>
        <p>
          
      The call graphs on this page come from a combination of Zipkin traces.
      The visualisation is not out-of-the-box Zipkin functionality and is
      bespoke to Kronicle.
    
        </p>
         
        <p
          class="mb-0"
        >
          
      A maximum of 20 call graphs are displayed on this
      page at any one time.
    
        </p>
      </div>
    </transition-stub>
     
    <!---->
     
    <div
      class="call-graphs"
    >
      <div
        class="call-graph my-2"
      >
        <h5>
          
        Call Graph 1
        
          <span
            class="badge ml-2 badge-primary"
          >
            
          1 Traces
        
          </span>
        </h5>
         
        <svg
          height="1200"
          overflow="auto"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            class="component-dependency-graph-background"
            fill-opacity="0"
          />
           
          <defs>
            <marker
              class="edge-marker all-edge-marker"
              id="component-dependency-graph-all-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
            <marker
              class="edge-marker other-edge-marker"
              id="component-dependency-graph-other-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
            <marker
              class="edge-marker scope-related-edge-marker"
              id="component-dependency-graph-scope-related-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
            <marker
              class="edge-marker scoped-edge-marker"
              id="component-dependency-graph-scoped-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
            <marker
              class="edge-marker related-edge-marker"
              id="component-dependency-graph-related-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
            <marker
              class="edge-marker direct-edge-marker"
              id="component-dependency-graph-direct-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
            <marker
              class="edge-marker selected-edge-marker"
              id="component-dependency-graph-selected-edge-marker"
              markerHeight="11.5"
              markerUnits="userSpaceOnUse"
              markerWidth="7.1"
              orient="auto-start-reverse"
              refX="18"
              refY="5.75"
              viewBox="0 0 7.1 11.5"
            >
              <path
                d="M1 11.5L0 10.4L5.1 5.7L0 1L1 0L7.1 5.7L1 11.5"
              />
            </marker>
          </defs>
           
          <g />
          <g />
          <g />
          <g />
          <g />
          <g>
            <path
              class="edge direct-edge"
              d="M50,50L50,250"
              id="component-dependency-graph-edge-0"
              marker-end="url(#component-dependency-graph-direct-edge-marker)"
            />
          </g>
          <g />
           
          <g />
          <g />
          <g />
          <g />
          <g />
          <g />
          <g>
            <circle
              class="node selected-node"
              cx="50"
              cy="50"
              id="component-dependency-graph-node-0"
              r="10"
              title="test-component-id-1, test-span-name-1-1"
            />
            <circle
              class="node selected-node"
              cx="50"
              cy="250"
              id="component-dependency-graph-node-1"
              r="10"
              title="test-component-id-1, test-span-name-2-2"
            />
          </g>
           
          <g />
          <g />
          <g />
          <g />
          <g />
          <g />
          <g>
            <text
              class="node-label selected-node-label"
              font-size="14"
              stroke-width="1.75"
              x="67"
              y="70"
            >
              <tspan
                x="67"
                y="70"
              >
                
        test-component-id-1
      
              </tspan>
              <tspan
                x="67"
                y="86.8"
              >
                
        test-span-name-1-1
      
              </tspan>
            </text>
            <text
              class="node-label selected-node-label"
              font-size="14"
              stroke-width="1.75"
              x="67"
              y="270"
            >
              <tspan
                x="67"
                y="270"
              >
                
        test-component-id-1
      
              </tspan>
              <tspan
                x="67"
                y="286.8"
              >
                
        test-span-name-2-2
      
              </tspan>
            </text>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="nodes"
    >
      <h4>
        Component Nodes
      </h4>
       
      <button
        class="btn node my-1 btn-success btn-block"
        type="button"
      >
        
      test-span-name-1-1
      
        <!---->
      </button>
      <button
        class="btn node my-1 btn-secondary btn-block"
        type="button"
      >
        
      test-span-name-2-2
      
        <!---->
      </button>
    </div>
  </div>
</div>
`;
